--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <a href="assets/adji_resume.pdf" download>
         <button class="btn download-btn">Download CV</button>
       </a>
-      <a href="adjisandra23@gmail.com"
+      <a href="mailto:adjisandra23@gmail.com"
         ><button class="btn contact-btn">Contact Me</button></a
       >
     </section>
