--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <a href="https://www.linkedin.com/in/adji-komara-sandra/"
             ><img src="assets/linkedin_light.png" alt="linkedin logo"
           /></a>
-          <a href="adjisandra23@gmail.com"
+          <a href="mailto:adjisandra23@gmail.com"
             ><img src="assets/email_light.png" alt="email logo"
           /></a>
         </div>
