--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <div class="inner-circle"></div>
         <img
           src="assets/adjiw.png"
-          alt="Mason Wilkes"
+          alt="Adjisan"
         />
       </div>
       <div class="hero-info">
         <h1>Adji Komara Sandra</h1>
-        <h2>Data Scientist</h2>
+        <h2>Data Analytics</h2>
         <div class="logo-container">
           <a href="https://github.com/Adjisandra23/"
             ><img src="assets/github_light.png" alt="github logo"
@@ -97,6 +97,7 @@
           <p>Power BI</p>
           <p>Tableau</p>
           <p>Excel</p>
+          <p>Looker Studio</p>
         </article>
       </div>
       <div class="wrapper">
@@ -108,17 +109,18 @@
           <p>Numpy</p>
           <p>Seaborn</p>
           <p>SQL</p>
+          <p>Power Query</p>
         </article>
       </div>
     </section>
     <section class="about-me" id="about-me" style="display: none;">
       <div class="wrapper">
         <h3>About Me</h3>
-        <p>Hello! I'm Adji Komara Sandra, a passionate data scientist and student at Pamulang University. I have a keen interest in data analysis and visualization, and I'm always eager to learn and explore new technologies. My background in electrical engineering and vehicle mechanics has provided me with a strong foundation in analytical thinking and problem-solving. In my free time, I enjoy working on data projects and honing my skills in various data tools and technologies.</p>
+        <p>Hello!, i'm a junior data analytics</p>
       </div>
     </section>
-    <!-- <footer>
-      <p>&copy</p>
-    </footer> -->
+    <footer>
+      <p>&copyAdji Komara Sandra</p>
+    </footer>
   </body>
 </html>
