--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <section class="about-me" id="about-me" style="display: none;">
       <div class="wrapper">
         <h3>About Me</h3>
-        <p>Hello!, i'm a junior data analytics</p>
+        <p>Hello! I'm Adji Komara Sandra, a passionate data scientist and student at Pamulang University. I have a keen interest in data analysis and visualization, and I'm always eager to learn and explore new technologies. My background in data administration and logistics has provided me with a strong foundation in analytical thinking and problem-solving. In my free time, I enjoy working on data projects and honing my skills in various data tools and technologies.</p>
       </div>
     </section>
     <footer>
